Added to Ice_cream and OH

--- a/w7/d1/lecture/ice_cream/templates/index.html
+++ b/w7/d1/lecture/ice_cream/templates/index.html
@@ -8,5 +8,35 @@
 <body>
     <h1>You made it!</h1>
     <a href="/ice_cream">See Flavors</a>
+    <form action="/add" method="POST">
+        <label>First Name:</label>
+        <input type="text" name="first_name">
+        <label>Last Name:</label>
+        <input type="text" name="last_name">
+        <label>Favorite Flavor is Chocolate</label>
+        <!-- <input type="text" name="flavor"> -->
+        <input type="hidden" name="flavor" value="Chocolate">
+        <input type="submit" value="Add flavor">
+    </form>
+    <form action="/add" method="POST">
+        <label>First Name:</label>
+        <input type="text" name="first_name">
+        <label>Last Name:</label>
+        <input type="text" name="last_name">
+        <label>Favorite Flavor is Vanilla</label>
+        <!-- <input type="text" name="flavor"> -->
+        <input type="hidden" name="flavor" value="Vanilla">
+        <input type="submit" value="Add flavor">
+    </form>
+    <form action="/add" method="POST">
+        <label>First Name:</label>
+        <input type="text" name="first_name">
+        <label>Last Name:</label>
+        <input type="text" name="last_name">
+        <label>Favorite Flavor is Strawberry</label>
+        <!-- <input type="text" name="flavor"> -->
+        <input type="hidden" name="flavor" value="Strawberry">
+        <input type="submit" value="Add flavor">
+    </form>
 </body>
 </html>
