--- a/w7/d1/lecture/ice_cream/templates/ice_cream.html
+++ b/w7/d1/lecture/ice_cream/templates/ice_cream.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Flavors of Ice Cream!</h1>
-    <p>{{flavors}}</p>
+    <!-- <p>{{flavors}}</p> -->
     <table>
         <tr>
             <th>Flavor of Ice Cream</th>
@@ -20,5 +20,13 @@
         </tr>
         {% endfor %}
     </table>
+
+    <h3>Form Data:</h3>
+    <p>First Name: {{session['first_name']}}</p>
+    <p>Last Name: {{session['last_name']}}</p>
+    <p>Favorite Flavor: {{session['flavor']}}</p>
+    <p>Chocolate: {{session['Chocolate']}}</p>
+    <p>Vanilla: {{session['Vanilla']}}</p>
+    <p>Strawberry: {{session['Strawberry']}}</p>
 </body>
 </html>
